fixed overlap of app-name with close icon and taken jdots print and logout icon into account by a bigger padding of container div

--- a/egw_fw.css
+++ b/egw_fw.css
@@ -272,7 +272,7 @@ html, body {
 	background-color: RGB(230, 230, 230);
 	display: inline-block;
 	margin: 0px 5px 0px 0px;
-	padding: 2px 15px 2px 10px;
+	padding: 2px 16px 2px 5px;
 	cursor: pointer;
 	border-width: 1px;
 	border-style: solid;
@@ -297,7 +297,7 @@ html, body {
 
 .egw_fw_ui_tab_header_active {
 	border-width: 1px 1px 0px 1px;
-	padding: 2px 10px 3px 10px;
+	padding: 2px 16px 3px 5px;
 	background-color: white;
 	background-image:none;
 }
@@ -343,8 +343,7 @@ html, body {
 	-webkit-border-top-left-radius:5px;
 	border-top-right-radius:5px;
 	border-top-left-radius:5px;
-	padding: 15px 5px 0px 5px;
-	x-background-image:url(images/header_tabs_bg.png);
+	padding: 15px 45px 0px 5px;
 	background-image:url(images/gradient22.png);
 	background-position: bottom;
 	background-repeat:repeat-x;
